--- a/lego.html
+++ b/lego.html
@@ -48,12 +48,7 @@
 										social media channels and traditional marketing channels to create a wholistic view of what LEGO can do 
 										to improve their current marketing goals.</p>
 									</header>
-								<h3>LEGO Marketing Strategy PDF</h3>
-								<object data="Elizondo LEGO Digital Marketing Strategy Report Final.pdf" type="application/pdf" width="100%" height="500px">
-								  <p>Unable to display PDF file. <a href="Elizondo LEGO Digital Marketing Strategy Report Final.pdf">Download</a> instead.</p>
-								</object>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
+								<h2>LEGO Marketing Strategy PDF<embed src="Elizondo LEGO Digital Marketing Strategy Report Final.pdf" type="application/pdf" width="100%" height="600px"/></h2>
 							</section>
 
 					</div>
