--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<li><a href="marketing.html"> Marketing </a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -58,7 +58,7 @@
 								</header>
 								<a href="lego.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Project</a></li>
+									<li><a href="lego.html" class="button large">Full Project</a></li>
 								</ul>
 							</article>
 
@@ -66,9 +66,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">March 27, 2024</span>
+										<h2><a href="women.html">Celebrating Women<br />
+										in Architecture & Engineering</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
