Adding copy pages

--- a/women.html
+++ b/women.html
@@ -45,6 +45,7 @@
 									in Architecture & Engineering</h1>
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<p> <a href="https://www.msconsultants.com/celebrating-women-in-architecture-engineering/"> <em>Original Post for MS Consultants</em></p>
 								<h3>Why Celebrate Women's History Month?</h3>
 								<p>Women throughout history have invented incredible devices and pushed many industries forward 
 								with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
