--- a/index.html
+++ b/index.html
@@ -70,22 +70,24 @@
 										<h2><a href="women.html">Celebrating Women<br />
 										in Architecture & Engineering</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="women.html" class="image fit"><img src="images/pic02.jpg" alt=""/></a>
+									<p>Women throughout history have invented incredible devices and pushed many industries forward 
+									with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
+									fields because, without them, our lives would look vastly different.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="women.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">February 19, 2024</span>
+										<h2><a href="#">Welcome to the Future<br />
+										Engineers Week 2024</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="engineer.html" class="image fit"><img src="images/pic03.jpg" alt=""/></a>
+									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="engineer.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
