Messing with bullets

--- a/engineer.html
+++ b/engineer.html
@@ -45,18 +45,42 @@
 									Engineers Week 2024</h1>
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
-								<p><a href="https://www.msconsultants.com/engineers-week-2024/"> Original post for MS Consultants </p>
-									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!
+								<p><a href="https://www.msconsultants.com/engineers-week-2024/"> Original post for MS Consultants</a></p>
+								<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!
 								This annual event, hosted by DiscoverE, is a celebration of how engineers make an impact on local and global communities. 
 								For students of all ages and levels, and educators too, embark on a journey of discovery to 
 								explore the fantastic events of this exciting week!</p>
-								<h3> Why Engineering? </h3>
+							<h3> Why Engineering? </h3>
 									<p>Engineering is at the forefront of innovation, instrumental in designing and creating solutions 
 									that shape the world of tomorrow. From the development of the internet and smartphones to space exploration 
 									and renewable energy solutions, engineers bring about progress. Through their creativity, expertise, and dedication, 
 									engineers address global challenges, driving technological advancements while making a positive impact on people's lives.</p>
-								<h3> Schedule for the week </h3>
-								
+							<h3> Schedule for the week </h3>
+								<ul class="disc">
+								<li>February 18: Engineering Week 2024 Kick-off, Welcome to the Future</li>
+								<li>February 20: #FutureCity2024 finals</li>
+								<ul class="square">
+									<li>The competition for grades 6-8 to design a city run on 100% electricity. You can learn more about this project</p></ul>
+								<li>February 22: #GirlDay2024 Celebration</li>
+								<ul class="square">
+									<li>This day is all about inspiring girls to create their own STEM identity through role models and resources on DiscoverE's website.</li>		
+								<li>February 24: Engineering Week Conclusion</li>
+								</ul>
+									<p>Engineers Week is the time to celebrate everything about the wonderful world of engineering. 
+									This event is not just about the future; it's about empowering students to shape our future through STEM fields.</p>
+							<h3>This year's theme: Welcome to the Future</h3>
+									<p>Whether it's planning a coffee meet-up with your engineering team
+									or you're an educator looking to inspire your students, DiscoverE's resources will spark innovation. 
+									This theme serves as an open door to tomorrow's innovations, showcasing how engineering is a dynamic force
+									that shapes our future.</p>
+									<p><a href="https://discovere.org/programs/engineers-week/"> "Welcome to the Future”</a> is a call to action for students interested in STEM or engineering fields, 
+									urging them to embrace their roles as future innovators and play an active part in the digital age
+									of progress and discovery.</p>
+							<h3>Resources for Students</h3>
+									<p>DiscoverE has a variety of free resources you can use to inspire future innovators,
+									such as hands-on engineering activities, lesson plans, information about engineering education, 
+									and pathways to careers in STEM. Visit <a href="https://discovere.org/downloadable-resources/"> DiscoverE's website </a> to learn more about how you can engage, teach, and inspire students
+									about the “E” in STEM.</p>
 							</section>
 
 					</div>
@@ -85,26 +109,18 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(614) 282-7444</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">elizondoabbey@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -112,7 +128,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
