--- a/copywriting.html
+++ b/copywriting.html
@@ -55,7 +55,7 @@
 										<h2><a href="#">Celebrating Women<br />
 										in Architecture & Engineering</a></h2>
 									</header>
-									<a href="women.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="women.html" class="image fit"><img src="images/womeneng.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="women.html" class="button">Full Story</a></li>
@@ -67,7 +67,7 @@
 										<h2><a href="#">Welcome to the Future:<br />
 										Engineers Week 2024</a></h2>
 									</header>
-									<a href="engineer.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="engineer.html" class="image fit"><img src="images/Engineers-Week-2024.png" alt="" /></a>
 									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
 										<li><a href="engineer.html" class="button">Full Story</a></li>
@@ -75,14 +75,16 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">March 11, 2024</span>
+										<h2><a href="stewart.html">Jon Stewart is ready for this election season<br />
+										are you?</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="stewart.html" class="image fit"><img src="images/jonstewart.jpg" alt="" /></a>
+									<p>I love “The Daily Show,” America's only source for news, 
+									the satirical platform for people to openly criticize 
+									political leaders and world conflicts with humor and genuineness.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="stewart.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
