--- a/engineer.html
+++ b/engineer.html
@@ -63,7 +63,7 @@
 									<li>The competition for grades 6-8 to design a city run on 100% electricity. You can learn more about this project</p></ul>
 								<li>February 22: #GirlDay2024 Celebration</li>
 								<ul class="square">
-									<li>This day is all about inspiring girls to create their own STEM identity through role models and resources on DiscoverE's website.</li>		
+									<li>This day is all about inspiring girls to create their own STEM identity through role models and resources on DiscoverE's website.</li></ul>
 								<li>February 24: Engineering Week Conclusion</li>
 								</ul>
 									<p>Engineers Week is the time to celebrate everything about the wonderful world of engineering. 
