--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<h2><a href="women.html">Celebrating Women<br />
 										in Architecture & Engineering</a></h2>
 									</header>
-									<a href="women.html" class="image fit"><img src="images/pic02.jpg" alt=""/></a>
+									<a href="women.html" class="image fit"><img src="images/womeneng.jpg" alt=""/></a>
 									<p>Women throughout history have invented incredible devices and pushed many industries forward 
 									with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
 									fields because, without them, our lives would look vastly different.</p>
@@ -84,7 +84,7 @@
 										<h2><a href="#">Welcome to the Future<br />
 										Engineers Week 2024</a></h2>
 									</header>
-									<a href="engineer.html" class="image fit"><img src="images/pic03.jpg" alt=""/></a>
+									<a href="engineer.html" class="image fit"><img src="images/Engineers-Week-2024.png" alt=""/></a>
 									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
 										<li><a href="engineer.html" class="button">Full Story</a></li>
@@ -92,14 +92,16 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">March 11, 2024</span>
+										<h2><a href="#">Jon Stewart is ready for this election season<br />
+										are you?</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="stewart.html" class="image fit"><img src="images/jonstewart.jpg" alt="" /></a>
+									<p>I love “The Daily Show,” America's only source for news, 
+									the satirical platform for people to openly criticize political leaders and 
+									world conflicts with humor and genuineness.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="stewart.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -181,26 +183,18 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">(614) 282-7444</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">elizondoabbey@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -208,7 +202,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
