--- a/women.html
+++ b/women.html
@@ -44,7 +44,7 @@
 									<h1>Celebrating Women<br />
 									in Architecture & Engineering</h1>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/womeneng.jpg" alt="" /></div>
 								<p> <a href="https://www.msconsultants.com/celebrating-women-in-architecture-engineering/"> <em>Original Post for MS Consultants</em></a></p>
 								<h3>Why Celebrate Women's History Month?</h3>
 								<p>Women throughout history have invented incredible devices and pushed many industries forward 
