Pictures and projects

--- a/copywriting.html
+++ b/copywriting.html
@@ -49,7 +49,7 @@
 							<li><a href="marketing.html"> Marketing </a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -67,7 +67,7 @@
 									<a href="women.html" class="image fit"><img src="images/womeneng.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="women.html" class="button">Full Story</a></li>
+										<li><a href="women.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -79,7 +79,7 @@
 									<a href="engineer.html" class="image fit"><img src="images/Engineers-Week-2024.png" alt="" /></a>
 									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
-										<li><a href="engineer.html" class="button">Full Story</a></li>
+										<li><a href="engineer.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -93,7 +93,7 @@
 									the satirical platform for people to openly criticize 
 									political leaders and world conflicts with humor and genuineness.</p>
 									<ul class="actions special">
-										<li><a href="stewart.html" class="button">Full Story</a></li>
+										<li><a href="stewart.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -105,7 +105,7 @@
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -117,7 +117,7 @@
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -129,7 +129,7 @@
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 							</section>
@@ -191,10 +191,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
