--- a/stewart.html
+++ b/stewart.html
@@ -62,10 +62,19 @@
 								quoting some inflammatory X (formerly known as Twitter) posts. My favorite response from him: 
 								“We know what they say, democracy dies in discussion.”</p>
 								<p>Jon Stewart is exactly who we need for this upcoming election season.</p>
-								<p>With several  global issues happening at once, and the volatile political climate, many people don’t have a way to discuss topics
+								<p>With several  global issues happening at once, and the volatile political climate, many people don't have a way to discuss topics
 								like the war in Ukraine or the Palestine-Israel conflict or why we have two of the oldest men running for the leader
 								of the United States. Stewart's version of “The Daily Show” is the best outlet for these discussions.</p>
-								 
+								<p>He frames each issue in a light, comedic way that helps me see the greater picture of global politics.
+								You can't change the world alone, so why not talk about it with people? You can start discussing their perspective 
+								and move forward from there.</p>
+								<p>I loved talking about “The Daily Show” with relatives who disagreed with my ideas about politics because it gave me an avenue 
+								for starting the discussion. Having people like Stewart addressing relevant issues helps push conversations 
+								forward to understanding people's opinions without judgment.</p>
+								<p>Maybe some people can't handle Stewart's crude humor about serious global issues. 
+								But I know that I wouldn't want anyone else to run “The Daily Show” during the 2024 election season. 
+								We need someone with some rational sense, but someone who also likes to have some fun in the midst of madness.</p>
+								<p>Thank you, Jon, for returning to your former state of glory sitting behind a desk, giving us the news as you see it.</p>
 
 							</section>
 
