--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									<p>I conducted a 3-month analysis of LEGO's current digital marketing strategy, including their active
 									social media channels and traditional marketing channels to create a wholistic view of what LEGO can do to improve their current marketing goals.</p>
 								</header>
-								<a href="lego.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="lego.html" class="image main"><img src="images/legobatman.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="lego.html" class="button large">Full Project</a></li>
 								</ul>
@@ -84,7 +84,7 @@
 									with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
 									fields because, without them, our lives would look vastly different.</p>
 									<ul class="actions special">
-										<li><a href="women.html" class="button">Full Story</a></li>
+										<li><a href="women.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -96,7 +96,7 @@
 									<a href="engineer.html" class="image fit"><img src="images/Engineers-Week-2024.png" alt=""/></a>
 									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
-										<li><a href="engineer.html" class="button">Full Story</a></li>
+										<li><a href="engineer.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -110,19 +110,19 @@
 									the satirical platform for people to openly criticize political leaders and 
 									world conflicts with humor and genuineness.</p>
 									<ul class="actions special">
-										<li><a href="stewart.html" class="button">Full Story</a></li>
+										<li><a href="stewart.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">April 2022</span>
+										<h2><a href="#">American Eagle<br />
+										Audience Persona</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/persona.png" alt="" /></a>
+									<p>After analyzing American Eagle's target audeince, I created a persona with similar demographics to use within their marketing strategy.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -134,7 +134,7 @@
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -146,7 +146,7 @@
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 							</section>
