Article adds and changes

--- a/copywriting.html
+++ b/copywriting.html
@@ -65,7 +65,9 @@
 										in Architecture & Engineering</a></h2>
 									</header>
 									<a href="women.html" class="image fit"><img src="images/womeneng.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Women throughout history have invented incredible devices and pushed many industries forward 
+										with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
+										fields because, without them, our lives would look vastly different.</p>
 									<ul class="actions special">
 										<li><a href="women.html" class="button">Read More</a></li>
 									</ul>
@@ -83,6 +85,19 @@
 									</ul>
 								</article>
 								<article>
+									<header>
+										<span class="date">August 21, 2023</span>
+										<h2><a href="#">Need advice for post-grad career goals?<br />
+										Listen to these Miami Students</a></h2>
+									</header>
+									<a href="careers.html" class="image fit"><img src="images/careers.jpeg" alt=""/></a>
+									<p>This will be my last year at Miami University. While it's been a unique college experience through COVID-19, 
+									I want to share some career exploration experiences from my junior year.</p>
+									<ul class="actions special">
+										<li><a href="careers.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+								<!--article>
 									<header>
 										<span class="date">March 11, 2024</span>
 										<h2><a href="stewart.html">Jon Stewart is ready for this election season<br />
@@ -131,7 +146,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
-								</article>
+								</article-->
 							</section>
 
 						<!-- Footer -->
