--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Portfolio<br /></h1>
-						<p>Welcome! Explore what I'm passionate about</p>
+						<p>Welcome! Explore my passion of language and storytelling</p>
 						<p><i> - Abbey Elizondo </i></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -101,6 +101,19 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">August 21, 2023</span>
+										<h2><a href="#">Need advice for post-grad career goals?<br />
+										Listen to these Miami Students</a></h2>
+									</header>
+									<a href="careers.html" class="image fit"><img src="images/careers.jpeg" alt=""/></a>
+									<p>This will be my last year at Miami University. While it's been a unique college experience through COVID-19, 
+									I want to share some career exploration experiences from my junior year.</p>
+									<ul class="actions special">
+										<li><a href="careers.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+								<!--article>
+									<header>
 										<span class="date">March 11, 2024</span>
 										<h2><a href="#">Jon Stewart is ready for this election season<br />
 										are you?</a></h2>
@@ -112,7 +125,7 @@
 									<ul class="actions special">
 										<li><a href="stewart.html" class="button">Read More</a></li>
 									</ul>
-								</article>
+								</article>-->
 								<article>
 									<header>
 										<span class="date">April 2022</span>
@@ -121,30 +134,6 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/persona.png" alt="" /></a>
 									<p>After analyzing American Eagle's target audeince, I created a persona with similar demographics to use within their marketing strategy.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
@@ -203,7 +192,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</section>
 						</section>
