--- a/marketing.html
+++ b/marketing.html
@@ -84,7 +84,7 @@
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--article>
 									<header>
 										<span class="date">April 18, 2017</span>
 										<h2><a href="#">Ante mattis<br />
@@ -131,7 +131,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
-								</article>
+								</article-->
 							</section>
 
 						<!-- Footer -->
