--- a/aepersona.html
+++ b/aepersona.html
@@ -28,6 +28,7 @@
 							<li><a href="index.html">Featured</a></li>
 							<li class="active"><a href="copywriting.html">Copywriting</a></li>
 							<li><a href="marketing.html">Marketing</a></li>
+							<li><a href="projects.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
