--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<!-- Google tag (gtag.js) -->
@@ -44,9 +44,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html"> Current Projects </a></li>
-							<li><a href="copywriting.html"> Copywriting </a></li>
-							<li><a href="marketing.html"> Marketing </a></li>
+							<li class="active"><a href="index.html">Featured</a></li>
+							<li><a href="copywriting.html">Copywriting</a></li>
+							<li><a href="marketing.html">Marketing</a></li>
+							<li><a href="projects.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -132,10 +133,10 @@
 										<h2><a href="#">American Eagle<br />
 										Audience Persona</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/persona.png" alt="" /></a>
+									<a href="aepersona.html" class="image fit"><img src="images/persona.png" alt="" /></a>
 									<p>After analyzing American Eagle's target audeince, I created a persona with similar demographics to use within their marketing strategy.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="aepersona.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 							</section>
@@ -147,10 +148,8 @@
 									<a href="index.html" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
+									<!--<span class="extra">&hellip;</span>-->
+									<a href="#" class="page">4</a>
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
