--- a/aepersona.html
+++ b/aepersona.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Insert Title</title>
+		<title>aepersona</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,8 +26,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Featured</a></li>
-							<li class="active"><a href="copywriting.html">Copywriting</a></li>
-							<li><a href="marketing.html">Marketing</a></li>
+							<li><a href="copywriting.html">Copywriting</a></li>
+							<li class="active"><a href="marketing.html">Marketing</a></li>
 							<li><a href="projects.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
@@ -46,9 +46,12 @@
 									<p>For my content marketing course, I learned the process of creating and planning content for a specific brand.</p>
 								</header>
 								<div class="image main"><img src="images/persona.png" alt="Female persona for a person who would buy American Eagle clothes." /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
-							</section>
+								<p> I completed a semester-long project to research, analyze, and create a campaign for a retail brand.
+								With my familiarity with American Eagle Outfitters, I chose their brand to research. This involved a few
+								kinds of research, including target audience, age demographics, brand voice, and competitors. I combined all these
+								data points into multiple deliverables, including a target persona, mock social media posts, short and long-form 
+								blog content, and a campaign calendar for these deliverables.</p>	
+								</section>
 
 					</div>
 
