--- a/copywriting.html
+++ b/copywriting.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio</title>
+		<title>copywriting</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -29,7 +29,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Portfolio<br /></h1>
-						<p>Welcome! Explore what I'm passionate about</p>
+						<p>Welcome! Explore my passion of language and storytelling</p>
 						<p><i> - Abbey Elizondo </i></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
