--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>marketing</title>
+		<title>projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,9 +44,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html"> Current Projects</a></li>
-							<li><a href="copywriting.html"> Copywriting</a></li>
-							<li class="active"><a href="marketing.html"> Marketing</a></li>
+							<li><a href="index.html"> Current Projects </a></li>
+							<li><a href="copywriting.html"> Copywriting </a></li>
+							<li><a href="marketing.html"> Marketing </a></li>
+							<li class="active"><a href="projects.html"> Projects </a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -60,41 +61,44 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">December 2023</span>
-										<h2><a href="#">LEGO Marketing<br />
-										Strategy</a></h2>
+										<span class="date">March 27, 2024</span>
+										<h2><a href="#">Celebrating Women<br />
+										in Architecture & Engineering</a></h2>
 									</header>
-									<a href="lego.html" class="image fit"><img src="images/legobatman.jpg" alt="" /></a>
-									<p>I conducted a 3-month analysis of LEGO's current digital marketing strategy, including their active
-										social media channels and traditional marketing channels to create a wholistic view of what LEGO can do 
-										to improve their current marketing goals.</p>
+									<a href="women.html" class="image fit"><img src="images/womeneng.jpg" alt="" /></a>
+									<p>Women throughout history have invented incredible devices and pushed many industries forward 
+										with their intellectual ideas. We want to recognize how important those women are to the architecture and engineering 
+										fields because, without them, our lives would look vastly different.</p>
 									<ul class="actions special">
-										<li><a href="lego.html" class="button">Read More</a></li>
+										<li><a href="women.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 2022</span>
-										<h2><a href="aepersona.html">American Eagle<br />
-										Audience Persona</a></h2>
+										<span class="date">February 19, 2024</span>
+										<h2><a href="#">Welcome to the Future:<br />
+										Engineers Week 2024</a></h2>
 									</header>
-									<a href="aepersona.html" class="image fit"><img src="images/persona.png" alt="" /></a>
-									<p>After analyzing American Eagle's target audeince, I created a persona with similar demographics to use within their marketing strategy.</p>
+									<a href="engineer.html" class="image fit"><img src="images/Engineers-Week-2024.png" alt="" /></a>
+									<p>Get ready to dive headfirst into the innovation of Engineers Week 2024 from February 18 to February 24!</p>
 									<ul class="actions special">
-										<li><a href="aepersona.html" class="button">Read More</a></li>
+										<li><a href="engineer.html" class="button">Read More</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">August 21, 2023</span>
+										<h2><a href="#">Need advice for post-grad career goals?<br />
+										Listen to these Miami Students</a></h2>
+									</header>
+									<a href="careers.html" class="image fit"><img src="images/careers.jpeg" alt=""/></a>
+									<p>This will be my last year at Miami University. While it's been a unique college experience through COVID-19, 
+									I want to share some career exploration experiences from my junior year.</p>
+									<ul class="actions special">
+										<li><a href="careers.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<!--article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
-									</ul>
 								</article>
 								<article>
 									<header>
@@ -149,13 +153,15 @@
 								</div>
 							</footer>
 
+					</div>
+
 				<!-- Footer -->
-					<footer id="footer">
+					<footer>
 					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
