Added new page, refined format

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Featured</a></li>
-							<li><a href="copywriting.html">Copywriting</a></li>
+							<li><a href="copywriting1.html">Copywriting</a></li>
 							<li><a href="marketing.html">Marketing</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<li><a href="projects1.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -130,29 +130,30 @@
 								<article>
 									<header>
 										<span class="date">April 2022</span>
-										<h2><a href="#">American Eagle<br />
-										Audience Persona</a></h2>
+										<h2><a href="aepersona.html">Mock Campaign<br />
+										American Eagle Outfitters</a></h2>
 									</header>
 									<a href="aepersona.html" class="image fit"><img src="images/persona.png" alt="" /></a>
-									<p>After analyzing American Eagle's target audeince, I created a persona with similar demographics to use within their marketing strategy.</p>
+									<p>After analyzing American Eagle's target audeince, 
+									I created a mock social media camapign using the research I conducted.</p>
 									<ul class="actions special">
 										<li><a href="aepersona.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 							</section>
 
-						<!-- Footer -->
+						<!-- Footer >
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>>
 									<a href="index.html" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
-									<!--<span class="extra">&hellip;</span>-->
+									<span class="extra">&hellip;</span>
 									<a href="#" class="page">4</a>
 									<a href="#" class="next">Next</a>
 								</div>
-							</footer>
+						</footer> -->
 
 					</div>
 
@@ -180,10 +181,6 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(614) 282-7444</a></p>
-							</section>
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">elizondoabbey@gmail.com</a></p>
