--- a/generic.html
+++ b/generic.html
@@ -25,9 +25,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Featured</a></li>
-							<li class="active"><a href="copywriting.html">Copywriting</a></li>
-							<li><a href="marketing.html">Marketing</a></li>
+							<li><a href="index.html"> Featured </a></li>
+							<li class="active"><a href="copywriting.html"> Copywriting </a></li>
+							<li><a href="marketing.html"> Marketing </a></li>
+							<li><a href="projects1.html"> Projects </a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -54,53 +55,10 @@
 
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(614) 282-7444</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">elizondoabbey@gmail.com</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
