--- a/marketing.html
+++ b/marketing.html
@@ -44,9 +44,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html"> Current Projects</a></li>
-							<li><a href="copywriting.html"> Copywriting</a></li>
+							<li><a href="index.html"> Featured</a></li>
+							<li><a href="copywriting1.html"> Copywriting</a></li>
 							<li class="active"><a href="marketing.html"> Marketing</a></li>
+							<li><a href="projects1.html"> Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/abbeyelizondo/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -141,24 +142,14 @@
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									
 								</div>
 							</footer>
-
-				<!-- Footer -->
-					<footer id="footer">
-					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Portfolio</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
