--- a/subpage.html
+++ b/subpage.html
@@ -30,76 +30,19 @@
 									</ul>
 								</header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Hi, I'm Abbey Elizondo<br /> </h1>
-											<p>Copywriter and Marketer</p>
-										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
-									</div>
-									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-								</section>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>My Skills</h2>
-									</header>
-									<div class="features">
-										<article>
-											<span class="icon solid fa-pen"></span>
-											<div class="content">
-												<h3>Creative Copywriting</h3>
-												<p>Lanuage is my passion, from social media to long-form content to website design,
-												writing is crucial to all aspects of an organization.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-network-wired"></span>
-											<div class="content">
-												<h3>Digital Marketing</h3>
-												<p>Analytical thinking with a creative mind, I use digital marketing tools to 
-												help organizations close gaps in all digital aspects.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>UX Research</h3>
-												<p>Understanding how people use technology reveals how to optimize content for consumers.
-												I can provide insight on how to optimize content and websites.</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-signal"></span>
-											<div class="content">
-												<h3>Analytical Thinking</h3>
-												<p>With access to specific data, I can make informed decisions tailored to an organization's
-												needs rather than broad campaigns that don't fit the right goals.</p>
-											</div>
-										</article>
-									</div>
-								</section>
-
-							<!-- Section -->
+							<!-- Article Section -->
 								<section>
 									<header class="major">
 										<h2>Recent Projects</h2>
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
+											<a href="oxford.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<h3>2,103,840 Minutes in Oxford</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="oxford.html" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -225,16 +168,15 @@
 									</header>
 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">elizondoabbey@gmail.com</a></li>
+										<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
+										<li class="icon solid fa-home">Columbus, Ohio<br /></li>
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; My Portfolio. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
