--- a/oxford.html
+++ b/oxford.html
@@ -35,9 +35,8 @@
 								<section>
 									<header class="main">
 										<h1>2,103,840 Minutes in Oxford</h1>
+										<span class="image right"><img src="images/pic11.jpg" alt="" /></span>
 									</header>
-
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 
 									<p><em>Originally published in <a href="https://www.miamistudent.net"> The Miami Student Newspaper</a></em></p>
 									<p>I remember the first time I set foot in Oxford, on a campus tour of Miami University. 
