--- a/oxford.html
+++ b/oxford.html
@@ -35,7 +35,7 @@
 								<section>
 									<header class="main">
 										<h1>2,103,840 Minutes in Oxford</h1>
-										<span class="image right"><img src="images/pic11.jpg" alt="" /></span>
+										<span class="image right"><img src="images/uptown.jpg" alt="" /></span>
 									</header>
 
 									<p><em>Originally published in <a href="https://www.miamistudent.net"> The Miami Student Newspaper</a></em></p>
