--- a/subpage.html
+++ b/subpage.html
@@ -38,7 +38,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="oxford.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="oxford.html" class="image"><img src="images/uptown.jpg" alt="" /></a>
 											<h3>2,103,840 Minutes in Oxford</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
