--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 											<h1>Hi, I'm Abbey Elizondo<br /> </h1>
 											<p>Copywriter and Marketer</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>My passion for language and data derives from my professional writing and digital marketing background. I have experience writing short and long-form content, social media strategy,
+										and digital certifications like Google Analytics, SEMrush, and Hubspot. Let's work together!	
+										</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
