--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Marketing Case Study</h2>
+										<h2>Highlights</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
+											<h3>Marketing Case Study</h3>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<p>Dive into the marketing strategy I created for LEGO's digital audience.</p>
 										</article>
